--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -25,6 +25,7 @@ jobs:
         uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: "nightly"
+          targets: "wasm32-unknown-unknown"
 
       - name: "Install Trunk"
         uses: taiki-e/install-action@v2.20.1
