--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 [dependencies]
 beef = "0.5.2"
 logos = "0.13.0"
+nohash-hasher = "0.2.0"
 paste = "1.0.13"
 rustc-hash = "1.1.0"
 
