--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2021"
 
 
 [dependencies]
+console_error_panic_hook = "0.1.7"
+console_log = "1.0.0"
 leptos = { version = "0.5.1", features = ["csr", "nightly"] }
+log = "0.4.20"
 tvm = { path = "../" }
 
 [dependencies.web-sys]
