--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ beef = "0.5.2"
 ena = "0.14.2"
 logos = "0.13.0"
 nohash-hasher = "0.2.0"
+once_cell = "1.18.0"
 paste = "1.0.13"
 rustc-hash = "1.1.0"
 
