--- a/bcgen/Cargo.toml
+++ b/bcgen/Cargo.toml
@@ -7,7 +7,12 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.79"
 chrono = "0.4.31"
 convert_case = { version = "0.6.0", default-features = false }
+indexmap = "2.1.0"
+parking_lot = "0.12.1"
 proc-macro2 = { version = "1.0.71", default-features = false }
 quote = { version = "1.0.33", default-features = false }
+serde = "1.0.195"
+serde_json = { version = "1.0.111", features = ["preserve_order"] }
