--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,8 @@ rustc-hash = "1.1.0"
 [dev-dependencies]
 indoc = "2.0.2"
 insta = "1.30.0"
-criterion = "0.4"
+divan = "0.1.14"
+
+[[bench]]
+name = "fib"
+harness = false
