--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ publish = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
+__debug = []
 
 [dependencies]
 beef = "0.5.2"
